// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LastNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="last_name"
      >
        Nazwisko
      </label>
      <input
        class="sc-iqAbSa fdLqwF"
        id="testId"
        label="Nazwisko"
        name="last_name"
        placeholder="Nazwisko"
        value="3232"
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<LastNameField /> matches snapshot 1`] = `
<input
  class="sc-iqAbSa jrHUfY"
  id="testId"
  label="Nazwisko"
  name="last_name"
  placeholder="Nazwisko"
  value=""
/>
`;

exports[`<LastNameField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="last_name"
      >
        LastName*
      </label>
      <input
        class="sc-iqAbSa fdLqwF"
        id="testId"
        label="LastName"
        name="last_name"
        placeholder="Nazwisko*"
        required=""
        value=""
      />
      <span
        class="sc-kEqYlL lmrtkS"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<LastNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd caNEXe"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx guHpUh"
    >
      <label
        for="last_name"
      >
        LastName
      </label>
      <input
        class="sc-iqAbSa jrHUfY"
        id="testId"
        label="LastName"
        name="last_name"
        placeholder="Nazwisko"
        value=""
      />
    </div>
  </form>
</div>
`;
